# ptao

./: .gitignore  .pylintrc  Makefile  README.md  __main__.py  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: main.workflow
.github/apmsui-build/: Dockerfile  entrypoint.sh
.github/workflows/: APMS-Packaging.yml  APMS-Tests.yml  APMS-UI-Tests.yml  pythonpackage.yml
alembic/: README  env.py
alembic/versions/: 10f730c6ee70_add_authors_field.py  49567e164192_rename_origin_id_orig_id.py  8abc70088073_added_settings_table.py  add6265f2306_added_pause_update_field.py  ec28764eef2d_add_owner_is_on_photos_field_to_user_.py
apms/: settings_example.yml
apms-ui/: package-lock.json  package.json
apms-ui/public/: index.html  manifest.json
apms-ui/src/: App.js  store.js
apms-ui/src/actions/: keyboardActions.js  photosActions.js  types.js  usersAction.js
apms-ui/src/components/: scrollToTop.js
apms-ui/src/people/: index.js  user-info.js
apms-ui/src/photos/: image.js  index.js  tag-people.js
apms-ui/src/reducers/: index.js  photosReducer.js  usersReducer.js
apms-ui/src/utils/: urlParams.js
apms/lib/config/: __init__.py
apms/lib/db/: database.py
apms/lib/providers/pd/: api.py  pdmanager.py
apms/lib/storage/: storage_base.py
apms/lib/storage/s3/: s3_storage.py
apms/server/: api_schemas.py  server.py  updater.py
apms/server/handlers/: main.py  photos.py  swagger.py  users.py
apms/tests/: conftest.py  pytest.ini  start_test_server.py  test_db.py  test_storage.py
