[metadata]
name = apms
version = 0.1
author = Approximator
author_email = alex@nls.la
description = Advanced Photo Management System
url = https://github.com/approximator/apms
requires-dist = setuptools
python_requires='>=3.7',
license_file = LICENSE

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    tornado
    pyyaml
    sqlalchemy
    tornado-sqlalchemy
    python-dateutil
    pillow
    boto3
    aiodns
    aiohttp
    aiofiles
    apispec
    apispec_webframeworks
    marshmallow >=3.0.0rc9
    marshmallow-sqlalchemy
    marshmallow-dataclass >=6.0.0rc5
    marshmallow-enum

[options.entry_points]
console_scripts =
    apms=apms.server.server:main

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .git .tox docs env venv
addopts = -sv --tb=short

[flake8]
max-line-length = 120
exclude =
    venv,
    .venv,
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
    alembic
    apms-ui
    tests
